[gd_scene load_steps=21 format=3 uid="uid://dvh2vqgob2niq"]

[ext_resource type="Script" path="res://prefabs/apartment/apartment_hall_scene.gd" id="1_mmlsi"]
[ext_resource type="PackedScene" uid="uid://dw7r4hu0l2ybu" path="res://models/apartment/Apartment.glb" id="1_oc4nn"]
[ext_resource type="PackedScene" uid="uid://vtsrnm2snj21" path="res://models/hallway/apt_hallway.glb" id="2_niqg6"]
[ext_resource type="Material" uid="uid://lbtmllp418rx" path="res://models/apartment/vidscreen_on.tres" id="2_o4kl1"]
[ext_resource type="PackedScene" uid="uid://c77yvk1jsoi7h" path="res://prefabs/interior/dynamic_door.tscn" id="3_gml1m"]
[ext_resource type="Environment" uid="uid://d2i24c60caf43" path="res://prefabs/apartment/apartment_hall_scene_env.tres" id="3_jmxjh"]
[ext_resource type="PackedScene" uid="uid://bvwd6fp6eftlj" path="res://models/apt_door/apt_door_red.glb" id="4_l73ky"]
[ext_resource type="AudioStream" uid="uid://cpd7kdxk7g6nu" path="res://sounds/ambient/686845__pblzr__ambience-open-window-room-wind-city-noise-001.ogg" id="5_r13cg"]
[ext_resource type="PackedScene" uid="uid://kkfbqa8vyuq7" path="res://prefabs/buildings/building_a.tscn" id="6_e3qcx"]
[ext_resource type="PackedScene" uid="uid://dubmgmel3dhc6" path="res://prefabs/buildings/building_b.tscn" id="7_ujd0b"]
[ext_resource type="PackedScene" uid="uid://dqqa714610ej0" path="res://prefabs/ui/fpui.tscn" id="8_btxj1"]
[ext_resource type="PackedScene" uid="uid://by83ykpu0hlhi" path="res://prefabs/buildings/building_c.tscn" id="8_onmt7"]
[ext_resource type="PackedScene" uid="uid://tiwtut8n2d8x" path="res://prefabs/sticker_get_apartment.tscn" id="9_lh6nj"]
[ext_resource type="PackedScene" uid="uid://bkmyui3vwa31k" path="res://prefabs/buildings/building_d.tscn" id="9_okqdu"]
[ext_resource type="AudioStream" uid="uid://b0t8hvjqe7vex" path="res://sounds/ambient/198957__mydo1__roomtone.ogg" id="11_1he6f"]

[sub_resource type="NavigationMesh" id="NavigationMesh_cy88a"]
vertices = PackedVector3Array(3.75, 3.27, 6.5, 4, 3.27, 3.75, 2.75, 3.27, 3.75, 3.75, 3.27, 6.5, 2.75, 3.27, 3.75, 2.25, 3.27, 3.25, -1.25, 3.27, 6.25, 2.25, 3.27, 3.25, 2.25, 3.27, -2.75, -1.25, 3.27, -2.75, -1.25, 3.27, 6.25, 1.5, 0.64, -1.5, 1.5, 0.64, -1, 2, 0.64, -1, 2, 0.64, -2.25, -1, 0.02, 1.25, -2.75, 0.02, 1.25, -0.75, 0.02, 1.75, 0.25, 0.02, -0.25, 0.25, 0.02, -1, -0.75, 0.02, -1, -1, 0.02, 1.25, -0.75, 0.02, 1.75, -0.75, 0.02, 2.75, -0.25, 0.02, 3, 0.25, 0.02, 3, 13.75, 0.02, 8.25, 14.5, 0.02, 8.25, 14.5, 0.02, 6, 13.5, 0.02, 6, 20.75, 0.02, 8.25, 21.5, 0.02, 8.25, 21.25, 0.02, 6.25, 20.5, 0.02, 6, 14.5, 0.02, 6, 17, 0.02, 6, 22, 0.02, 4.25, 20.5, 0.02, 6, 21.25, 0.02, 6.25, 22.25, 0.02, 5.5, 1.5, 0.02, 1.5, 1.25, 0.02, 0.25, 0.25, 0.02, -0.25, -1, 0.02, 1.25, -0.75, 0.02, 1.75, 0.25, 0.02, 3, 0.5, 0.02, 4.25, 6.5, 0.02, 6, 7.5, 0.02, 6, 17, 0.02, 6, 18, 0.02, 6, 22, 0.02, 4.25, 0.5, 0.02, 4.25, -0.75, 0.02, 6, 6.5, 0.02, 6, 13.5, 0.02, 6, 14.5, 0.02, 6, 22, 0.02, 4.25, 0.5, 0.02, 4.25, 0.25, 0.02, 3, -0.25, 0.02, 3, -0.75, 0.02, 6, 17.25, 0.02, 8.25, 18, 0.02, 8.25, 18, 0.02, 6, 17, 0.02, 6, 20.5, 0.02, 6, 22.25, 0.02, 5.5, 22, 0.02, 4.25, 18, 0.02, 6, 6.75, 0.02, 8.25, 7.5, 0.02, 8.25, 7.5, 0.02, 6, 6.5, 0.02, 6, 13.5, 0.02, 6, 22, 0.02, 4.25, 0.5, 0.02, 4.25, 7.5, 0.02, 6, -3.25, 2.77, 0.75, -3.25, 2.77, 2, -2.25, 2.77, 2, -2.25, 2.77, 0.75, 13.25, 3.27, 8.5, 14.75, 3.27, 8.5, 14.75, 3.27, 6.5, 13, 3.27, 6.25, 4, 3.27, 3.75, 6, 3.27, 6.25, 8, 3.27, 6.25, 16.75, 3.27, 8.5, 18.25, 3.27, 8.5, 18.25, 3.27, 6.5, 16.5, 3.27, 6.25, 16.5, 3.27, 6.25, 18.25, 3.27, 6.5, 20, 3.27, 6.25, 22.25, 3.27, 3.75, 20.25, 3.27, 8.5, 21.75, 3.27, 8.5, 21.75, 3.27, 6.5, 20, 3.27, 6.25, 13, 3.27, 6.25, 14.75, 3.27, 6.5, 16.5, 3.27, 6.25, 22.25, 3.27, 3.75, 4, 3.27, 3.75, 20, 3.27, 6.25, 21.75, 3.27, 6.5, 22.25, 3.27, 6.25, 22.25, 3.27, 3.75, 6, 3.27, 6.25, 6.25, 3.27, 8.5, 7.75, 3.27, 8.5, 8, 3.27, 6.25, 4, 3.27, 3.75, 8, 3.27, 6.25, 13, 3.27, 6.25, 4, 3.27, 3.75, 3.75, 3.27, 6.5, 6, 3.27, 6.25)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(4, 3, 5), PackedInt32Array(5, 3, 6), PackedInt32Array(8, 7, 9), PackedInt32Array(9, 7, 10), PackedInt32Array(12, 11, 13), PackedInt32Array(13, 11, 14), PackedInt32Array(17, 16, 15), PackedInt32Array(19, 18, 20), PackedInt32Array(20, 18, 21), PackedInt32Array(24, 23, 25), PackedInt32Array(25, 23, 22), PackedInt32Array(27, 26, 28), PackedInt32Array(28, 26, 29), PackedInt32Array(31, 30, 32), PackedInt32Array(32, 30, 33), PackedInt32Array(36, 35, 34), PackedInt32Array(39, 38, 37), PackedInt32Array(44, 43, 45), PackedInt32Array(45, 43, 40), PackedInt32Array(40, 43, 41), PackedInt32Array(41, 43, 42), PackedInt32Array(48, 47, 46), PackedInt32Array(51, 50, 49), PackedInt32Array(54, 53, 52), PackedInt32Array(57, 56, 55), PackedInt32Array(59, 58, 60), PackedInt32Array(60, 58, 61), PackedInt32Array(63, 62, 64), PackedInt32Array(64, 62, 65), PackedInt32Array(67, 66, 68), PackedInt32Array(68, 66, 69), PackedInt32Array(71, 70, 72), PackedInt32Array(72, 70, 73), PackedInt32Array(77, 76, 74), PackedInt32Array(74, 76, 75), PackedInt32Array(81, 80, 78), PackedInt32Array(78, 80, 79), PackedInt32Array(83, 82, 84), PackedInt32Array(84, 82, 85), PackedInt32Array(88, 87, 86), PackedInt32Array(90, 89, 91), PackedInt32Array(91, 89, 92), PackedInt32Array(94, 93, 95), PackedInt32Array(95, 93, 96), PackedInt32Array(98, 97, 99), PackedInt32Array(99, 97, 100), PackedInt32Array(102, 101, 103), PackedInt32Array(103, 101, 104), PackedInt32Array(104, 101, 105), PackedInt32Array(107, 106, 108), PackedInt32Array(108, 106, 109), PackedInt32Array(111, 110, 112), PackedInt32Array(112, 110, 113), PackedInt32Array(116, 115, 114), PackedInt32Array(119, 118, 117)]
geometry_parsed_geometry_type = 1
geometry_collision_mask = 4294967169
cell_height = 0.01
agent_height = 1.7
agent_max_climb = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_kedbr"]
size = Vector3(0.25, 3, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_20jms"]
size = Vector3(4, 3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_2s46r"]
size = Vector3(7, 1, 6.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_4jgd2"]
size = Vector3(25, 3, 3)

[node name="ApartmentHallScene" type="Node3D"]
script = ExtResource("1_mmlsi")
_vidscreen_on_texture = ExtResource("2_o4kl1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3_jmxjh")

[node name="Geometry" type="Node3D" parent="."]

[node name="Inside" type="NavigationRegion3D" parent="Geometry"]
navigation_mesh = SubResource("NavigationMesh_cy88a")

[node name="Apartment" parent="Geometry/Inside" instance=ExtResource("1_oc4nn")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)

[node name="hallway" parent="Geometry/Inside" instance=ExtResource("2_niqg6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 0, 5)

[node name="outside" type="Node3D" parent="Geometry"]

[node name="BuildingA" parent="Geometry/outside" instance=ExtResource("6_e3qcx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -1, -8)
realScale = Vector3(10, 17, 5.5)
_pos = Vector3(-4, -1, -8)

[node name="BuildingB" parent="Geometry/outside" instance=ExtResource("7_ujd0b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, -5, -9)
realScale = Vector3(10.5, 17, 5.5)
_pos = Vector3(7, -5, -9)

[node name="BuildingC" parent="Geometry/outside" instance=ExtResource("8_onmt7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, -3, -2)
realScale = Vector3(7.39031, 17, 3.696)
_pos = Vector3(-6, -3, -2)

[node name="BuildingD" parent="Geometry/outside" instance=ExtResource("9_okqdu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -1)
realScale = Vector3(6.65128, 17, 6.50496)
_pos = Vector3(8, 0, -1)

[node name="Doors" type="Node3D" parent="."]

[node name="exitDoor" parent="Doors" instance=ExtResource("4_l73ky")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 22.75, 0, 5.75)

[node name="EnforcerDoor" parent="Doors" instance=ExtResource("3_gml1m")]
unique_name_in_owner = true
transform = Transform3D(-8.9407e-08, 0, -1, 0, 1, 0, 1, 0, -8.9407e-08, 21.75, 0, 6.75)

[node name="ApartmentDoor" parent="Doors" instance=ExtResource("3_gml1m")]
unique_name_in_owner = true
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0.75, 0, 3.375)

[node name="DummyDoor1" parent="Doors" instance=ExtResource("3_gml1m")]
unique_name_in_owner = true
transform = Transform3D(-8.9407e-08, 0, -1, 0, 1, 0, 1, 0, -8.9407e-08, 18.25, 0, 6.75)

[node name="DummyDoor2" parent="Doors" instance=ExtResource("3_gml1m")]
unique_name_in_owner = true
transform = Transform3D(-8.9407e-08, 0, -1, 0, 1, 0, 1, 0, -8.9407e-08, 14.75, 0, 6.75)

[node name="DummyDoor3" parent="Doors" instance=ExtResource("3_gml1m")]
unique_name_in_owner = true
transform = Transform3D(-8.9407e-08, 0, -1, 0, 1, 0, 1, 0, -8.9407e-08, 7.75, 0, 6.75)

[node name="StickerGet" parent="." instance=ExtResource("9_lh6nj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 1.245, -2.5)

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="BedroomSpawnPoint" type="Node3D" parent="SpawnPoints"]
unique_name_in_owner = true
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -0.25, 0, 0)

[node name="HallwaySpawnPoint" type="Node3D" parent="SpawnPoints"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 0, 5)

[node name="EnforcerJumpscare" type="Node3D" parent="."]

[node name="EnforcerSpawn" type="Node3D" parent="EnforcerJumpscare"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 0, 8)

[node name="EnforcerMidHall" type="Node3D" parent="EnforcerJumpscare"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 0, 5)

[node name="AreaTriggers" type="Node3D" parent="."]

[node name="ExitTrigger" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.25, 1.5, 5)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/ExitTrigger"]
shape = SubResource("BoxShape3D_kedbr")

[node name="HallTrigger3" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.25, 1.5, 5)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/HallTrigger3"]
shape = SubResource("BoxShape3D_kedbr")

[node name="HallTrigger2" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.25, 1.5, 5)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/HallTrigger2"]
shape = SubResource("BoxShape3D_kedbr")

[node name="HallTrigger1" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.25, 1.5, 5)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/HallTrigger1"]
shape = SubResource("BoxShape3D_kedbr")

[node name="AptDoorTrigger" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.5, 3.125)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/AptDoorTrigger"]
shape = SubResource("BoxShape3D_kedbr")

[node name="InRoomTrigger" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 1.5, 0.25)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/InRoomTrigger"]
shape = SubResource("BoxShape3D_20jms")

[node name="EntireRoomTrigger" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 1.5, 0.25)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/EntireRoomTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -0.25)
shape = SubResource("BoxShape3D_2s46r")

[node name="EntireHallTrigger" type="Area3D" parent="AreaTriggers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 1.5, 5)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTriggers/EntireHallTrigger"]
shape = SubResource("BoxShape3D_4jgd2")

[node name="FPUI" parent="." instance=ExtResource("8_btxj1")]

[node name="AudioSources" type="Node3D" parent="."]

[node name="RoomTone" type="AudioStreamPlayer" parent="AudioSources"]
stream = ExtResource("11_1he6f")
volume_db = 4.0
autoplay = true
bus = &"Ambience"

[node name="VidscreenAudio" type="AudioStreamPlayer3D" parent="AudioSources"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.3125, 1.75, 2.3125)
max_distance = 10.0
bus = &"_vidscreen"

[node name="WindowAudio" type="AudioStreamPlayer3D" parent="AudioSources"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2.2, -3.125)
stream = ExtResource("5_r13cg")
autoplay = true
max_distance = 10.0
bus = &"Ambience"

[node name="lights" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="lights"]
transform = Transform3D(0.98578, -0.0593877, -0.157198, 0, -0.935469, 0.353409, -0.168042, -0.348384, -0.922166, -6.44069, 11, -14)
light_cull_mask = 4294967283
shadow_enabled = true

[node name="ApartmentLight" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.75, 2.75, 0)
visible = false
light_color = Color(1, 0.968627, 0.615686, 1)
light_energy = 0.2
light_cull_mask = 4294967283
shadow_enabled = true

[node name="HallLight" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.75, 5)
light_color = Color(1, 0.968627, 0.615686, 1)
light_energy = 0.2
light_cull_mask = 4294967283
shadow_enabled = true

[node name="HallLight2" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 10.5, 2.75, 5)
light_color = Color(1, 0.968627, 0.615686, 1)
light_energy = 0.2
light_cull_mask = 4294967283
shadow_enabled = true

[node name="HallLight3" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 21, 2.75, 5)
light_color = Color(1, 0.968627, 0.615686, 1)
light_energy = 0.2
light_cull_mask = 4294967283
shadow_enabled = true

[connection signal="body_entered" from="AreaTriggers/ExitTrigger" to="." method="_on_exit_trigger_body_entered"]
[connection signal="body_entered" from="AreaTriggers/HallTrigger3" to="." method="_on_hall_trigger_3_body_entered"]
[connection signal="body_entered" from="AreaTriggers/HallTrigger2" to="." method="_on_hall_trigger_2_body_entered"]
[connection signal="body_entered" from="AreaTriggers/HallTrigger1" to="." method="_on_hall_trigger_1_body_entered"]
[connection signal="body_entered" from="AreaTriggers/AptDoorTrigger" to="." method="_on_apt_door_trigger_body_entered"]
[connection signal="body_entered" from="AreaTriggers/InRoomTrigger" to="." method="_on_in_room_trigger_body_entered"]
[connection signal="body_entered" from="AreaTriggers/EntireRoomTrigger" to="." method="_on_entire_room_trigger_body_entered"]
[connection signal="body_exited" from="AreaTriggers/EntireRoomTrigger" to="." method="_on_entire_room_trigger_body_exited"]
[connection signal="body_entered" from="AreaTriggers/EntireHallTrigger" to="." method="_on_entire_hall_trigger_body_entered"]
[connection signal="body_exited" from="AreaTriggers/EntireHallTrigger" to="." method="_on_entire_hall_trigger_body_exited"]
[connection signal="finished" from="AudioSources/VidscreenAudio" to="." method="_on_vidscreen_audio_finished"]

[editable path="Geometry/Inside/hallway"]
